--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: William Hoppes Website
 
 # Short description of your site
-description: My projects and other stuff!
+description: My projects and other stuff
 
 # --- Navigation bar options --- #
 
