--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,7 @@ description: My projects and other stuff
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Projects:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+  Blogs I follow: "https://williamhoppes.github.io/2017-03-06-Blogs_I_follow/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
